--- a/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
+++ b/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
@@ -276,7 +276,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="280" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="josh-bruce" translatesAutoresizingMaskIntoConstraints="NO" id="yUA-LL-m8K" customClass="RoundedImage" customModule="Josh_Bruce" customModuleProvider="target">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="josh-bruce" translatesAutoresizingMaskIntoConstraints="NO" id="yUA-LL-m8K" customClass="RoundedImage" customModule="Josh_Bruce" customModuleProvider="target">
                                             <rect key="frame" x="113" y="12" width="55" height="55"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="55" id="iOY-7o-u4i"/>
@@ -354,11 +354,46 @@
                     </collectionView>
                     <connections>
                         <segue destination="prg-qL-O5q" kind="presentation" identifier="showCategoryItemDetail" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="oXv-Oi-HeP"/>
+                        <segue destination="Hy7-Ph-n4H" kind="presentation" identifier="showQuickCategorySelection" modalPresentationStyle="overCurrentContext" id="R40-ZQ-wWP"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7CM-Ej-Wiz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1886" y="1163"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="aCf-yJ-gCe">
+            <objects>
+                <viewController id="Hy7-Ph-n4H" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kxL-O6-dut"/>
+                        <viewControllerLayoutGuide type="bottom" id="SPo-mM-OUH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IDV-e1-hAd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="14u-eZ-lgS">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rGR-Ic-sQw">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="14u-eZ-lgS" secondAttribute="trailing" id="2zv-Mr-nUE"/>
+                            <constraint firstItem="14u-eZ-lgS" firstAttribute="leading" secondItem="IDV-e1-hAd" secondAttribute="leading" id="LAI-hK-je0"/>
+                            <constraint firstItem="SPo-mM-OUH" firstAttribute="top" secondItem="14u-eZ-lgS" secondAttribute="bottom" id="SHD-LK-bCQ"/>
+                            <constraint firstItem="14u-eZ-lgS" firstAttribute="top" secondItem="IDV-e1-hAd" secondAttribute="top" id="rXV-NU-0aZ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dTB-hs-C2C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1886" y="1902"/>
         </scene>
         <!--Item View Controller-->
         <scene sceneID="TRm-vV-Aw4">
